k8s/patient-namespace/patient-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: patient-service-ingress
  namespace: patient
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: api.gindho.com
    http:
      paths:
      - path: /patient
        pathType: Prefix
        backend:
          service:
            name: patient-service
            port:
              number: 8081
